<resources>
    <string name="app_name">Parking Kori</string>
    <string name="goto_login">LOGIN</string>
    <string name="login">LOGIN</string>
    <string name="cancel">Cancel</string>
    <string name="keep_me_logged_in">Keep me logged in</string>
    <string name="action_settings">Profile</string>
    <string name="logout">End Shift</string>
    <string name="boshundhora_city">Boshundhora City</string>
    <string name="scan_barcode">Scan Barcode</string>
    <string name="vip">VIP</string>
    <string name="available_car_parking">Available Car Parking:</string>
    <string name="available_bike_parking">Available Bike Parking:</string>
    <string name="extra_parking">Extra Parking:</string>
    <string name="parking_kori">Parking Kori</string>
    <string name="a_product_of_dex_hub">A Product of Dex Hub</string>
    <string name="select_vehicle_type">Select Vehicle Type</string>
    <string name="type_in_registration_number">Type In Registration Number</string>
    <string name="vip_registration">VIP Registration</string>
    <string name="end_shift">End Shift</string>
    <string name="report">Report</string>
    <string name="information">Information</string>
    <string name="check_in">Check In</string>
    <string name="check_out">Check Out</string>
    <string name="or">Enter Ticket Number</string>
    <string name="registration_ticket_no">Registration/Ticket No.</string>
    <string name="car">Car</string>
    <string name="_12457">12457</string>
    <string name="confirm">Confirm</string>

    <string name="toast_3">Bluetooth device is unavailable</string>
    <string name="toast_4">Bluetooth device not detected. Please open Bluetooth!</string>
    <string name="toast_5">Not Found InnterPrinter!</string>
    <string name="toast_6">Bluetooth connect failed!</string>
    <string name="powered_by_eunoia_i_t_solutions">Powered By Eunoia I.T Solutions</string>
    <string name="scan_vip">Scan VIP</string>
    <string name="check_in_vip">Check In VIP</string>
    <string name="check_out_vip">Check Out VIP</string>
    <string name="textview">TextView</string>
    <string name="check_in_token">Check In Token</string>
    <string name="ticket_number">Ticket Number</string>
    <string name="registration_number">Registration Number</string>
    <string name="entry_at">Entry At</string>
    <string name="title_activity_base">BaseActivity</string>
    <string name="low_storage_error">Face detector dependencies cannot be downloaded due to low device storage</string>
    <string name="no_camera_permission">This application cannot run because it does not have the camera permission.  The application will now exit.</string>
    <string name="ok">OK</string>
    <string name="permission_camera_rationale">Access to the camera is needed for detection</string>
    <string name="appimage">AppImage</string>


</resources>
