<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/report"
            android:icon="@drawable/ic_assignment_black_24dp"
            android:title="@string/report"
            app:showAsAction="always" />
        <item
            android:id="@+id/info"
            android:icon="@drawable/ic_info_black_24dp"
            android:title="@string/information"
            app:showAsAction="always" />

        <item
            android:id="@+id/nav_logout"
            android:icon="@drawable/ic_power_settings_new_black_24dp"
            android:title="@string/logout"
            app:showAsAction="always" />
    </group>

</menu>