<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/dashboard_background"
    android:orientation="vertical"
    tools:context="eis.example.miller.parkingkoriv4.CheckInActivity">

    <android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/drawer_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fitsSystemWindows="true">

        <!-- Layout to contain contents of main body of screen (drawer will slide over this) -->
        <FrameLayout
            android:id="@+id/content_frame"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <android.support.v7.widget.Toolbar
                android:id="@+id/my_toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:background="@drawable/appbargradient"
                android:elevation="4dp"
                android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
                app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
                tools:targetApi="lollipop">

                <TextView
                    android:id="@+id/toolbar_title"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:fontFamily="@font/lato_light"
                    android:gravity="center"
                    android:text="@string/boshundhora_city"
                    android:textColor="@color/backgroundWhite"
                    android:textSize="8pt"
                    android:textStyle="bold" />

            </android.support.v7.widget.Toolbar>

            <LinearLayout
                android:id="@+id/checkin_layout"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="?attr/actionBarSize"
                android:orientation="vertical">


                <TextView
                    android:id="@+id/checkin_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5pt"
                    android:gravity="center"
                    android:text="@string/check_in"
                    android:textAppearance="@style/CustomFont"
                    android:textColor="@color/buttonColor"
                    android:textSize="13pt" />

                <TextView
                    android:id="@+id/type_selection_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="40dp"
                    android:gravity="center"
                    android:text="@string/select_vehicle_type"
                    android:textAppearance="@style/CustomFont"
                    android:textColor="@color/rememberme" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <Spinner
                        android:id="@+id/vehicle_type_spinner"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginStart="20dp"
                        android:layout_marginTop="10dp"
                        android:layout_marginEnd="20dp"
                        android:layout_marginBottom="20dp"
                        android:background="@drawable/appbargradient" />
                </LinearLayout>

                <TextView
                    android:id="@+id/reg_number_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/type_in_registration_number"
                    android:textAppearance="@style/CustomFont"
                    android:textColor="@color/rememberme"
                    android:textSize="14sp" />

                <EditText
                    android:id="@+id/checkin_regnum__input"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_gravity="center"
                    android:layout_marginLeft="20dp"
                    android:layout_marginTop="5dp"
                    android:layout_marginRight="20dp"
                    android:background="@drawable/input_box_border"
                    android:ems="10"
                    android:hint="@string/_12457"
                    android:inputType="number"
                    android:maxLength="6"
                    android:paddingStart="20dp"
                    android:paddingLeft="20dp"
                    android:textAlignment="center"
                    android:textColor="@color/blackText" />


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp">

                    <Button
                        android:id="@+id/checkin_confirm_button"
                        style="?android:borderlessButtonStyle"
                        android:layout_width="70dp"
                        android:layout_height="50dp"
                        android:layout_margin="30dp"
                        android:layout_weight="1"
                        android:background="@color/buttonColor"
                        android:text="@string/confirm" />

                    <Button
                        android:id="@+id/checkin_cancel_button"
                        style="?android:borderlessButtonStyle"
                        android:layout_width="70dp"
                        android:layout_height="50dp"
                        android:layout_margin="30dp"
                        android:layout_weight="1"
                        android:background="@color/buttonColor"
                        android:text="@string/cancel" />
                </LinearLayout>

            </LinearLayout>

        </FrameLayout>


        <!-- Container for contents of drawer - use NavigationView to make configuration easier -->
        <android.support.design.widget.NavigationView
            android:id="@+id/nav_view"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="start"
            android:background="@color/backgroundWhite"
            android:fitsSystemWindows="true"
            app:headerLayout="@layout/navigation_header"
            app:itemTextColor="@color/blackText"
            app:menu="@menu/navigation_drawer_menu" />

    </android.support.v4.widget.DrawerLayout>

</LinearLayout>