<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backgroundWhite"
    android:orientation="vertical">


    <TextView
        android:id="@+id/ticket_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="24dp"
        android:text="@string/textview"
        android:textColor="@color/buttonColor"
        android:textSize="10pt" />

    <TextView
        android:id="@+id/textView15"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginTop="68dp"
        android:text="@string/check_in_token"
        android:textAlignment="center"
        android:textColor="@color/rememberme"
        android:textStyle="bold" />

    <TableLayout
        android:id="@+id/table"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView15"
        android:layout_alignParentRight="true"
        android:layout_margin="5dp"
        android:layout_marginTop="20dp">

        <TableRow>

            <TextView
                android:id="@+id/tickNum"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:layout_margin="5dp"
                android:text="@string/ticket_number"
                android:textColor="@color/rememberme" />

            <TextView
                android:id="@+id/checkin_print_ticket_number_show"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_margin="5dp"
                android:text="@string/textview"
                android:textAlignment="center"
                android:textColor="@color/rememberme"
                android:textStyle="bold" />
        </TableRow>

        <TableRow>

            <TextView
                android:id="@+id/ticketReg"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:layout_margin="5dp"
                android:text="@string/registration_number"
                android:textColor="@color/rememberme" />

            <TextView
                android:id="@+id/checkin_print_registration_number_show"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_margin="5dp"
                android:text="@string/textview"
                android:textAlignment="center"
                android:textColor="@color/rememberme"
                android:textStyle="bold" />
        </TableRow>

        <TableRow>

            <TextView
                android:id="@+id/EntryAt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:layout_margin="5dp"
                android:text="@string/entry_at"
                android:textColor="@color/rememberme" />

            <TextView
                android:id="@+id/checkin_print_entry_at_show"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_margin="5dp"
                android:text="@string/textview"
                android:textAlignment="center"
                android:textColor="@color/rememberme"
                android:textStyle="bold" />
        </TableRow>

        <TableRow>

            <TextView
                android:id="@+id/vehtyp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:layout_margin="5dp"
                android:text="Vehicle Type"
                android:textColor="@color/rememberme" />

            <TextView
                android:id="@+id/checkin_print_vehicle_type_show"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_margin="5dp"
                android:text="234ewdf"
                android:textAlignment="center"
                android:textColor="@color/rememberme"
                android:textStyle="bold" />
        </TableRow>


    </TableLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/table"
        android:layout_margin="20dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/print_checkin_ticket"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="3dp"
            android:layout_weight="1"
            android:background="@color/buttonColor"
            android:text="Print" />

    </LinearLayout>


</RelativeLayout>