<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity"
    android:background="@drawable/landing_background">

    <Button
        android:id="@+id/login_button"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_marginStart="74dp"
        android:layout_marginLeft="74dp"
        android:layout_marginTop="420dp"
        android:background="@color/buttonColor"
        android:text="@string/login"
        android:textAppearance="@style/CustomFont"
        android:textSize="7pt"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/cancel_button"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_marginStart="200dp"
        android:layout_marginLeft="200dp"
        android:layout_marginTop="420dp"
        android:background="@color/buttonColor"
        android:onClick="CancelApp"
        android:text="@string/cancel"
        android:textAppearance="@style/CustomFont"
        android:textSize="7pt"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/username_input"
        android:layout_width="215dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="74dp"
        android:layout_marginLeft="74dp"
        android:layout_marginTop="300dp"
        android:inputType="textPersonName"
        android:textAppearance="@style/CustomFont"
        android:textSize="10pt"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:autofillHints="" tools:targetApi="o"
        android:textColor="@color/blackText"/>

    <EditText
        android:id="@+id/password_input"
        android:layout_width="215dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="74dp"
        android:layout_marginLeft="74dp"
        android:layout_marginTop="350dp"
        android:inputType="textPassword"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:importantForAutofill="no" tools:targetApi="o"
        android:textColor="@color/blackText"/>

    <CheckBox
        android:id="@+id/remember_input"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="65dp"
        android:layout_marginLeft="65dp"
        android:layout_marginTop="450dp"
        android:text="@string/keep_me_logged_in"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:textColor="@color/rememberme"
        android:textAppearance="@style/CustomFont"
        android:visibility="gone"/>

</android.support.constraint.ConstraintLayout>