<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DashboardActivity"
    android:background="@drawable/dashboard_background">


    <android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/drawer_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fitsSystemWindows="true">

        <!-- Layout to contain contents of main body of screen (drawer will slide over this) -->
        <FrameLayout
            android:id="@+id/content_frame"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <android.support.v7.widget.Toolbar
                android:id="@+id/my_toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:background="@drawable/appbargradient"
                android:elevation="4dp"
                android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
                app:popupTheme="@style/ThemeOverlay.AppCompat.Light" tools:targetApi="lollipop">

                <TextView
                    android:id="@+id/toolbar_title"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:textColor="@color/backgroundWhite"
                    android:textSize="8pt"
                    android:fontFamily="@font/lato_light"
                    android:textStyle="bold" />

            </android.support.v7.widget.Toolbar>

            <android.support.constraint.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/dashboard_content">

                <Button
                    android:id="@+id/checkin_button"
                    android:layout_width="135dp"
                    android:layout_height="93dp"
                    android:layout_marginStart="33dp"
                    android:layout_marginLeft="33dp"
                    android:layout_marginTop="140dp"
                    android:background="@color/backgroundWhite"
                    android:text="Check In"
                    android:textAppearance="@style/CustomFont"
                    android:textColor="@color/buttonColor"
                    android:textSize="10pt"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <Button
                    android:id="@+id/checkout_button"
                    android:layout_width="135dp"
                    android:layout_height="93dp"
                    android:layout_marginTop="140dp"
                    android:layout_marginEnd="33dp"
                    android:layout_marginRight="33dp"
                    android:background="@color/backgroundWhite"
                    android:text="@string/check_out"
                    android:textAppearance="@style/CustomFont"
                    android:textColor="@color/buttonColor"
                    android:textSize="10pt"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <Button
                    android:id="@+id/scanbarcode_button"
                    android:layout_width="135dp"
                    android:layout_height="93dp"
                    android:layout_marginStart="33dp"
                    android:layout_marginLeft="33dp"
                    android:layout_marginTop="250dp"
                    android:background="@color/backgroundWhite"
                    android:text="@string/scan_barcode"
                    android:textAppearance="@style/CustomFont"
                    android:textColor="@color/buttonColor"
                    android:textSize="10pt"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"/>

                <Button
                    android:id="@+id/vip_button"
                    android:layout_width="135dp"
                    android:layout_height="93dp"
                    android:layout_marginStart="24dp"
                    android:layout_marginLeft="24dp"
                    android:layout_marginTop="17dp"
                    android:background="@color/backgroundWhite"
                    android:text="@string/vip"
                    android:textAppearance="@style/CustomFont"
                    android:textColor="@color/buttonColor"
                    android:textSize="10pt"
                    app:layout_constraintStart_toEndOf="@+id/scanbarcode_button"
                    app:layout_constraintTop_toBottomOf="@+id/checkout_button"/>

                <TextView
                    android:id="@+id/available_carpark_view"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="34dp"
                    android:layout_marginLeft="34dp"
                    android:layout_marginTop="25dp"
                    android:text="@string/available_car_parking"
                    android:textAppearance="@style/CustomFont"
                    android:textColor="@color/rememberme"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/scanbarcode_button" />

                <TextView
                    android:id="@+id/available_bikepark_view"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="32dp"
                    android:layout_marginLeft="32dp"
                    android:layout_marginTop="60dp"
                    android:text="@string/available_bike_parking"
                    android:textAppearance="@style/CustomFont"
                    android:textColor="@color/rememberme"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/scanbarcode_button" />

                <TextView
                    android:id="@+id/extrapark_view"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="32dp"
                    android:layout_marginLeft="32dp"
                    android:layout_marginTop="15dp"
                    android:text="@string/extra_parking"
                    android:textAppearance="@style/CustomFont"
                    android:textColor="@color/rememberme"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/available_bikepark_view" />


            </android.support.constraint.ConstraintLayout>
        </FrameLayout>


        <!-- Container for contents of drawer - use NavigationView to make configuration easier -->
        <android.support.design.widget.NavigationView
            android:id="@+id/nav_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:fitsSystemWindows="true"
            app:menu="@menu/navigation_drawer_menu"
            android:background="@color/backgroundWhite"
            app:itemTextColor="@color/blackText" />

    </android.support.v4.widget.DrawerLayout>

</android.support.constraint.ConstraintLayout>