<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/dashboard_background"
    tools:context=".CheckOutActivity">


    <android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/drawer_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fitsSystemWindows="true">

        <!-- Layout to contain contents of main body of screen (drawer will slide over this) -->
        <FrameLayout
            android:id="@+id/content_frame"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <android.support.v7.widget.Toolbar
                android:id="@+id/my_toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:background="@drawable/appbargradient"
                android:elevation="4dp"
                android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
                app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
                tools:targetApi="lollipop">

                <TextView
                    android:id="@+id/toolbar_title"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:fontFamily="@font/lato_light"
                    android:gravity="center"
                    android:text="@string/boshundhora_city"
                    android:textColor="@color/backgroundWhite"
                    android:textSize="8pt"
                    android:textStyle="bold" />

            </android.support.v7.widget.Toolbar>

            <LinearLayout
                android:id="@+id/checkin_layout"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="?attr/actionBarSize"
                android:orientation="vertical">


                <TextView
                    android:id="@+id/checkout_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5pt"
                    android:gravity="center"
                    android:text="@string/check_out"
                    android:textAppearance="@style/CustomFont"
                    android:textColor="@color/buttonColor"
                    android:textSize="13pt" />

                <Button
                    android:id="@+id/checkout_scanbarcode_button"
                    android:layout_width="match_parent"
                    android:layout_height="80dp"
                    android:layout_gravity="center"
                    android:layout_margin="10dp"
                    android:backgroundTint="@color/buttonColor"
                    android:onClick="scanBarcode"
                    android:text="Scan to  Check Out"
                    android:textAppearance="@style/CustomFont"
                    android:textColor="@color/backgroundWhite" />


                <TextView
                    android:id="@+id/or_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:gravity="center"
                    android:text="@string/or"
                    android:textAppearance="@style/CustomFont"
                    android:textColor="@color/rememberme"
                    android:textSize="20sp" />


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:orientation="horizontal">

                    <EditText
                        android:id="@+id/checkout_regnum_input"
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:layout_margin="20dp"
                        android:background="@drawable/input_box_border"
                        android:backgroundTint="@color/backgroundWhite"
                        android:ems="10"
                        android:hint="@string/registration_ticket_no"
                        android:inputType="text"
                        android:textAlignment="center"
                        android:textColor="@color/rememberme" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp">

                    <Button
                        android:id="@+id/checkout_confirm_button"
                        style="?android:borderlessButtonStyle"
                        android:layout_width="70dp"
                        android:layout_height="50dp"
                        android:layout_margin="20dp"
                        android:layout_weight="1"
                        android:background="@color/buttonColor"
                        android:text="@string/confirm" />

                    <Button
                        android:id="@+id/cancel_checkout_button"
                        android:layout_width="70dp"
                        android:layout_height="50dp"
                        android:layout_margin="20dp"
                        android:layout_weight="1"
                        android:background="@color/buttonColor"
                        android:text="Cancel" />
                </LinearLayout>


            </LinearLayout>

        </FrameLayout>


        <!-- Container for contents of drawer - use NavigationView to make configuration easier -->
        <android.support.design.widget.NavigationView
            android:id="@+id/nav_view"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="start"
            android:background="@color/backgroundWhite"
            android:fitsSystemWindows="true"
            app:headerLayout="@layout/navigation_header"
            app:itemTextColor="@color/blackText"
            app:menu="@menu/navigation_drawer_menu" />

    </android.support.v4.widget.DrawerLayout>
</android.support.constraint.ConstraintLayout>